# meissnerseal

./: .gitignore  .gitleaks.toml  .yamllint.yml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-fast.yml  ci-thorough.yml  codeql.yml  security-scan.yml
crates/arcanum-cli/: CONTRACT.md  Cargo.toml
crates/arcanum-cli/src/: main.rs
crates/arcanum-core/: CONTRACT.md  Cargo.toml
crates/arcanum-core/src/: error.rs  export.rs  lib.rs
crates/arcanum-core/src/audit/: event.rs  mod.rs
crates/arcanum-core/src/item/: mod.rs  model.rs  store.rs  types.rs
crates/arcanum-core/src/keys/: device.rs  hierarchy.rs  mod.rs  wrapping.rs
crates/arcanum-core/src/policy/: local_policy.rs  mod.rs
crates/arcanum-core/src/recovery/: emergency_kit.rs  mod.rs
crates/arcanum-core/src/sync/: mod.rs  state.rs
crates/arcanum-core/src/transfer/: envelope.rs  mod.rs  pairing.rs  protocol.rs
crates/arcanum-core/src/vault/: engine.rs  format.rs  migration.rs  mod.rs
crates/arcanum-core/tests/: vectors.rs
crates/arcanum-crypto/: CONTRACT.md  Cargo.toml
crates/arcanum-crypto/src/: aead.rs  argon2.rs  hkdf.rs  lib.rs  rng.rs  subtle.rs  test_vectors.rs  types.rs  zeroize.rs
crates/arcanum-crypto/src/kdf/: argon2.rs  hkdf.rs  mod.rs
crates/arcanum-ffi/: CONTRACT.md  Cargo.toml
crates/arcanum-ffi/src/: error.rs  lib.rs  memory.rs
crates/arcanum-pqc/: CONTRACT.md  Cargo.toml
crates/arcanum-security/: CONTRACT.md  Cargo.toml
crates/arcanum-security/src/: audit_guard.rs  hardware.rs  lib.rs  policy.rs  redaction.rs  secret_lifecycle.rs  side_channel.rs
crates/arcanum-sync-server/: CONTRACT.md  Cargo.toml
crates/arcanum-sync-server/src/: main.rs
crates/meissnerseal-cli/: CONTRACT.md  Cargo.toml
crates/meissnerseal-cli/src/: main.rs
crates/meissnerseal-cli/tests/: e2e.rs
crates/meissnerseal-core/: CONTRACT.md  Cargo.toml
crates/meissnerseal-core/proptest-regressions/vault/: format.txt
crates/meissnerseal-core/src/: error.rs  export.rs  lib.rs
crates/meissnerseal-core/src/audit/: event.rs
crates/meissnerseal-core/src/item/: mod.rs  model.rs  store.rs
crates/meissnerseal-core/src/keys/: device.rs  hierarchy.rs  mod.rs  pairing.rs
crates/meissnerseal-core/src/policy/: local_policy.rs
crates/meissnerseal-core/src/recovery/: emergency_kit.rs
crates/meissnerseal-core/src/sync/: conflict.rs
crates/meissnerseal-core/src/transfer/: envelope.rs  mod.rs  protocol.rs  replay.rs
crates/meissnerseal-core/src/vault/: engine.rs  format.rs  migration.rs  mod.rs
crates/meissnerseal-core/tests/: vectors.rs
crates/meissnerseal-crypto/: CONTRACT.md  Cargo.toml
crates/meissnerseal-crypto/src/: aead.rs  argon2.rs  hash.rs  hkdf.rs  lib.rs  test_vectors.rs  zeroize.rs
crates/meissnerseal-crypto/src/kdf/: argon2.rs  hkdf.rs  mod.rs
crates/meissnerseal-ffi/: CONTRACT.md  Cargo.toml
crates/meissnerseal-ffi/src/: api.rs  lib.rs  memory.rs
crates/meissnerseal-pqc/: CONTRACT.md  Cargo.toml
crates/meissnerseal-pqc/src/: backend.rs  hybrid.rs  lib.rs  mldsa.rs  mlkem.rs
crates/meissnerseal-security/: CONTRACT.md  Cargo.toml
crates/meissnerseal-security/src/: audit_guard.rs  hardware.rs  secret_lifecycle.rs  side_channel.rs
crates/meissnerseal-sync-server/: CONTRACT.md  Cargo.toml
crates/meissnerseal-sync-server/src/: main.rs
docs/adr/: ADR-001-xchacha20-default.md  ADR-002-version-vectors.md  ADR-003-bech32m-recovery.md  ADR-004-handle-lease-ffi.md  ADR-005-formal-methods.md  ADR-006-argon2id-params.md  ADR-007-sha256-transcript.md  ADR-008-arcexp-export.md  ADR-008-msexp-export.md  ADR-009-user-mediated-conflicts.md  ADR-010-unrecoverable-by-default.md  ADR-011-rustcrypto-ecosystem.md  ADR-012-mlkem-risk.md  ADR-013-os-csprng-only.md  ADR-014-noise-tertiary.md  ADR-015-mathematical-verification.md  ADR-016-standards-conformance.md  ADR-017-extended-toolchain.md  ADR-018-branch-protection-ci-workflow.md  ADR-019-base-development-toolchain.md  ADR-020-agent-governance-model.md  ADR-021-codeql-deferred.md  ADR-022-execution-state-separate-repo.md  ADR-023-libcrux-mlkem-backend.md  ADR-024-kani-type-level-proofs.md  ADR-025-core-stable-implement-not-rescope.md  ADR-026-create-returns-vault-handle.md  ADR-027-xwing-hybrid-kem.md  ADR-028-signature-crypto-agility.md  ADR-029-encrypted-authenticated-record-table.md  ADR-030-vault-format-versioning-migration.md  ADR-031-licensing.md  ADR-032-version-policy.md  ADR-033-vault-typestate.md  ADR-034-local-ci.md  ADR-034-rustcrypto-mlkem-backend.md  ADR-035-ug-combiner-hybrid-kem.md  ADR-036-mlkem-parameter-set.md  ADR-037-proverif-symbolic-scope.md  ADR-038-stable-decision-protocol.md  (+1 more)
docs/agents/: AGENT_PROMPT_TEMPLATE.md
docs/architecture/: mvp_roadmap.md  overview.md
docs/development/: git_workflow.md  mathematical_verification.md  workflow.md
docs/ops/: dependency_risk_register.md  incident_response.md  release_checklist.md
docs/security/: finding_register.yaml  security_engineering_protocol.md  standards_conformance.md  supply_chain.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: device_pairing.rs  encrypted_item.rs  native_message.rs  seen_envelope_ids.rs  sync_envelope.rs  transfer_envelope.rs  vault_header.rs
scripts/: setup-dev.sh  verify-github-config.sh
security-lab/: README.md
security-lab/environment/: GDB-procedures.md  QEMU-setup.md  tooling.md
security-lab/results/: README.md
security-lab/scenarios/: 001-offline-vault-brute-force.md  002-aead-tampering.md  003-transfer-replay.md  004-protocol-downgrade.md  005-timing-oracle.md  (+6 more)
supply-chain/: config.toml
test-vectors/: README.md  aead_xchacha20_v1.json  cross_verify.py  mlkem_768_kat_v1.json  mlkem_cross_verify.py  requirements.txt  signing_ed25519_cross_verify.py  signing_ed25519_v1.json  transfer_hybrid_cross_verify.py  transfer_hybrid_v1.json  vault_format_negative_v1.json  vault_format_struct_v1.json  vault_format_v1.json  vault_kdf_param_tlv_v1.json  vault_kdf_v1.json  vault_wrap_v1.json
(+14 files in other folders)
