[workspace]
resolver = "2"
members = [
    "crates/arcanum-core",
    "crates/arcanum-crypto",
    "crates/arcanum-pqc",
    "crates/arcanum-ffi",
    "crates/arcanum-security",
    "crates/arcanum-cli",
    "crates/arcanum-sync-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Arcanum Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/umudique/arcanum"

[workspace.dependencies]
# Internal workspace crates — versioned to satisfy cargo-deny wildcard check
arcanum-crypto      = { path = "crates/arcanum-crypto",      version = "0.1.0" }
arcanum-pqc         = { path = "crates/arcanum-pqc",         version = "0.1.0" }
arcanum-security    = { path = "crates/arcanum-security",    version = "0.1.0" }
arcanum-core        = { path = "crates/arcanum-core",        version = "0.1.0" }
arcanum-ffi         = { path = "crates/arcanum-ffi",         version = "0.1.0" }
arcanum-sync-server = { path = "crates/arcanum-sync-server", version = "0.1.0" }

# Cryptography
argon2 = "0.5"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = { version = "0.8", features = ["getrandom"] }
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
bech32 = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Async (sync server)
tokio = { version = "1", features = ["full"] }

# UUID / IDs
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive"] }

# ─── Workspace-level lints ───────────────────────────────────────────────────
# All lints are "warn" here. CI runs clippy with -D warnings, promoting them
# to errors. This gives warnings locally and failures in CI.

[workspace.lints.rust]
# Flag unsafe code for review — not denied because FFI crate needs it
unsafe_code = "warn"
# Prevent unused code from silently accumulating
dead_code = "warn"
# Declare expected cfg flags for formal verification tools
# kani: bounded model checking (cargo kani), prusti: Hoare triple proofs
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(prusti)'] }

[workspace.lints.clippy]
# ── Security-critical lints ──
# Panic in library code is forbidden — use Result
panic = "warn"
# Unwrap hides errors — use ? or handle explicitly
unwrap_used = "warn"
# Expect with no message is unclear — require message
expect_used = "warn"
# No TODO in production code
todo = "warn"
# No unimplemented! in production code
unimplemented = "warn"
# No unreachable! in production — every path should be handled
unreachable = "warn"

# ── Correctness lints ──
# Integer arithmetic can panic or overflow
arithmetic_side_effects = "warn"
# Indexing without bounds check can panic
indexing_slicing = "warn"
# Casting can silently truncate
cast_possible_truncation = "warn"
cast_sign_loss = "warn"

# ── Code quality ──
# Large functions are hard to review
cognitive_complexity = "warn"

# ─── Build profiles ──────────────────────────────────────────────────────────
[profile.release]
opt-level = 3
strip = "symbols"
lto = true

[profile.dev]
opt-level = 0
debug = true
