[package]
name = "arcanum-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "arcanum"
path = "src/main.rs"

[dependencies]
arcanum-core.workspace = true
arcanum-security.workspace = true
clap.workspace = true
anyhow.workspace = true
zeroize.workspace = true
rpassword = "2"

[package.metadata.cargo-machete]
ignored = ["arcanum-core", "arcanum-security", "anyhow", "zeroize"]
