[package]
name = "arcanum-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arcanum-crypto = { path = "../arcanum-crypto" }
arcanum-pqc    = { path = "../arcanum-pqc" }
arcanum-security = { path = "../arcanum-security" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
zeroize.workspace = true
thiserror.workspace = true
