[package]
name = "arcanum-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arcanum-crypto.workspace = true
arcanum-pqc.workspace = true
arcanum-security.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
zeroize.workspace = true
thiserror.workspace = true

[package.metadata.cargo-machete]
ignored = ["arcanum-pqc", "arcanum-security", "serde", "serde_json", "uuid"]
