[package]
name = "arcanum-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
arcanum-core = { path = "../arcanum-core" }
arcanum-security = { path = "../arcanum-security" }
zeroize.workspace = true
thiserror.workspace = true
