[package]
name = "arcanum-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
arcanum-core.workspace = true
arcanum-security.workspace = true
zeroize.workspace = true
thiserror.workspace = true

[package.metadata.cargo-machete]
ignored = ["thiserror"]
