[package]
name = "arcanum-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arcanum-crypto.workspace = true
zeroize.workspace = true
thiserror.workspace = true

[package.metadata.cargo-machete]
ignored = ["thiserror", "arcanum-crypto"]
