[package]
name = "arcanum-sync-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "arcanum-server"
path = "src/main.rs"

# cargo-machete: deps declared for future implementation, not yet referenced in stub
[package.metadata.cargo-machete]
ignored = ["arcanum-core", "arcanum-crypto", "tokio", "serde", "serde_json", "anyhow", "thiserror"]

[dependencies]
arcanum-core.workspace = true
arcanum-crypto.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
