[package]
name = "meissnerseal-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
meissnerseal-crypto.workspace = true
meissnerseal-pqc.workspace = true
meissnerseal-security.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
zeroize.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Property-based testing — mvp_roadmap §3 deliverable
proptest.workspace = true

[package.metadata.cargo-machete]
ignored = ["meissnerseal-pqc", "meissnerseal-security", "serde", "serde_json", "uuid"]
