[package]
name = "meissnerseal-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
argon2.workspace = true
chacha20poly1305.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true
rand.workspace = true
zeroize.workspace = true
subtle.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Test-only: deserialize test-vectors/*.json known-answer vectors. Already a
# vetted workspace dependency (used by meissnerseal-core); no new supply-chain crate
# and no version change — only test code links it.
serde_json.workspace = true
# Property-based testing — mvp_roadmap §3 deliverable
proptest.workspace = true

[package.metadata.cargo-machete]
ignored = ["aes-gcm"]
