[package]
name = "meissnerseal-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
meissnerseal-crypto.workspace = true
zeroize.workspace = true
thiserror.workspace = true

[package.metadata.cargo-machete]
ignored = ["thiserror", "meissnerseal-crypto"]
