[package]
name = "meissnerseal-sync-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "meissnerseal-server"
path = "src/main.rs"

# cargo-machete: deps declared for future implementation, not yet referenced in stub
[package.metadata.cargo-machete]
ignored = ["meissnerseal-core", "meissnerseal-crypto", "tokio", "serde", "serde_json", "anyhow", "thiserror"]

[dependencies]
meissnerseal-core.workspace = true
meissnerseal-crypto.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
